Revert "Fixed mobile arrows too low"

--- a/src/components/pages/LandingPage/LandingPage.module.scss
+++ b/src/components/pages/LandingPage/LandingPage.module.scss
@@ -50,7 +50,6 @@ b {
             h1 {
                 color: $mainColor;
                 margin: 0;
-                user-select: none;
         
                 font-weight: normal;
                 font-size: 60px;
@@ -63,7 +62,6 @@ b {
             h2 {
                 color: white;
                 margin: 0;
-                user-select: none;
         
                 font-weight: normal;
 
@@ -121,10 +119,6 @@ b {
 
             svg {
                 animation: hop 3s infinite forwards;
-            }
-
-            @include media-phone {
-                margin-bottom: 25px;
             }
 
         }
